Fixed the CSS linter

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,4 +1,5 @@
-": {
+{
+  "rules": {
     "at-rule-name-case": "lower",
     "at-rule-name-space-after": "always",
     "at-rule-semicolon-newline-after": "always",
